# name-matching

./: .coveragerc  .env_tmpl  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.py  venv.sh
data/interim/: data_fields_gdpr.xlsx
data/raw/AW/: business_terms.csv  columns.csv
data/raw/BOI/: business_terms.csv  data_fields.csv  validation_mappings.csv
data/raw/BRD/: business_terms.csv  data_fields.csv  validation_mappings.csv
notebooks/: Untitled.ipynb  campaigns_binary_classifier.ipynb  campaigns_recommender_perfume.ipynb  data_quality_thresholds.ipynb  gdpr_data_classification.ipynb  mapping_automation.ipynb  time_series.ipynb
references/: blogs.txt  github_and_docs.txt  papers.txt
reports/: data_quality_thresholds.html
src/: config.py
src/adapters/: legacy_orm.py  orm.py  repository.py  responses.py
src/domain/: basemapping.py  stemmerdict.py  stringcatalog.py  textmapping.py  tfidfmapping.py
src/entrypoints/: fastapi.py
src/service_layer/: services.py  unit_of_work.py
src/utils/: base.py  functions.py  mlflow.py  plots.py  recursion.py  tsa.py
tests/: test_app.py
