[tool.poetry]
name = "name-matching"
version = "0.1.0"
description = "Naming matching"
authors = ["Miroslav Mlynarik <miroslav.mlynarik@gmail.com>"]
packages = [{ include = "src"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
numpy = "^1.21.3"
pandas = "1.2.2"
scikit-learn = "0.24.1"
scipy = "1.6.1"
ipython = "7.19.0"
SQLAlchemy = "1.4.17"
cx-Oracle = "8.2.1"
pymssql = "2.1.5"
psycopg2-binary = "2.9.1"
openpyxl = "3.0.7"
textdistance = "4.2.1"
fastapi = "0.65.2"
python-slugify = "5.0.2"
sparse-dot-topn = "0.3.1"
sqlmodel = "0.0.4"
python-dotenv = "0.19.0"
requests = "2.26.0"
uvicorn = "0.15.0"
matplotlib = "^3.4.3"
jupyterlab = "^3.2.1"
statsmodels = "^0.13.0"

[tool.poetry.dev-dependencies]
pycodestyle = "^2.8.0"
pytest = "6.2.5"
coverage = "6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
